--- a/grc/linecode_diff_manch_dec.block.yml
+++ b/grc/linecode_diff_manch_dec.block.yml
@@ -1,5 +1,5 @@
 id: linecode_diff_manch_dec
-label: diff_manch_dec
+label: Differential Manchester Decoder 
 category: '[linecode]'
 
 templates:
@@ -13,14 +13,12 @@ templates:
 #     * dtype (e.g. int, float, complex, byte, short, xxx_vector, ...)
 #     * default
 parameters:
-- id: parametername_replace_me
-  label: FIX ME:
-  dtype: string
-  default: You need to fill in your grc/linecode_diff_manch_dec.block.yaml
-#- id: ...
-#  label: ...
-#  dtype: ...
-
+- id: alignment
+  label: Initial alignment
+  dtype: enum
+  options: [0, 1]
+  option_labels: ["Even", "Odd"]
+  default: 0
 #  Make one 'inputs' list entry per input and one 'outputs' list entry per output.
 #  Keys include:
 #      * label (an identifier for the GUI)
@@ -29,18 +27,11 @@ parameters:
 #      * vlen (optional - data stream vector length. Default is 1)
 #      * optional (optional - set to 1 for optional inputs. Default is 0)
 inputs:
-#- label: ...
-#  domain: ...
-#  dtype: ...
-#  vlen: ...
-#  optional: ...
-
+- label: in
+  dtype: byte
 outputs:
-#- label: ...
-#  domain: ...
-#  dtype: ...
-#  vlen: ...
-#  optional: ...
+- label: in
+  dtype: byte
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
